<resources>
    <string name="app_name">PIU Calc</string>

    <!-- Common -->
    <string name="add">추가</string>
    <string name="cancel">취소</string>
    <string name="ok">확인</string>
    <string name="close">닫기</string>

    <!-- Data Common -->
    <string name="song_title">곡 제목</string>
    <string name="song_artist">아티스트명</string>
    <string name="bpm">BPM</string>
    <string name="difficulty">난이도</string>
    <string name="step_artist">채보 제작자</string>

    <string name="rank_intermediate">INTERMEDIATE</string>
    <string name="rank_advanced">ADVANCED</string>
    <string name="rank_expert">EXPERT</string>
    <string name="rank_beginner">BEGINNER</string>

    <string name="rank_level_format">%s LV.%d</string>
    <string name="rank_score_format"><b>%,d</b>/%,d</string>

    <string name="grade_sssp">SSS+</string>
    <string name="grade_sss">SSS</string>
    <string name="grade_ssp">SS+</string>
    <string name="grade_ss">SS</string>
    <string name="grade_sp">S+</string>
    <string name="grade_s">S</string>
    <string name="grade_aaap">AAA+</string>
    <string name="grade_aaa">AAA</string>
    <string name="grade_aap">AA+</string>
    <string name="grade_aa">AA</string>
    <string name="grade_ap">A+</string>
    <string name="grade_a">A</string>

    <string name="nickname_format">%s#%s</string>

    <string name="login_nickname">닉네임</string>
    <string name="login_code">코드</string>
    <string name="login_title">현재 칭호</string>
    <string name="login_hint_nickname">닉네임을 입력해주세요.</string>
    <string name="login_hint_code">코드를 입력해주세요.</string>
    <string name="login_button">로그인</string>

    <string name="home_title">HOME</string>
    <string name="my_page_title">MY</string>

    <string name="img_desc_plus">plus</string>
    <string name="img_desc_minus">minus</string>
</resources>