<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/label_nickname"
            style="@style/CommonEditLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_nickname"
            app:layout_constraintVertical_bias="0.45"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/edit_nickname"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/edit_nickname"
            style="@style/CommonEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_label"
            android:autofillHints="name"
            android:hint="@string/login_hint_nickname"
            app:layout_constraintTop_toBottomOf="@id/label_nickname"
            app:layout_constraintBottom_toTopOf="@id/labal_code"/>

        <TextView
            android:id="@+id/labal_code"
            style="@style/CommonEditLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_contents"
            android:text="@string/login_code"
            app:layout_constraintTop_toBottomOf="@id/edit_nickname"
            app:layout_constraintBottom_toTopOf="@id/edit_code"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/edit_code"
            style="@style/CommonEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_label"
            android:autofillHints="name"
            android:inputType="number"
            android:hint="@string/login_hint_code"
            app:layout_constraintTop_toBottomOf="@id/labal_code"
            app:layout_constraintBottom_toTopOf="@id/btn_login"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/CommonSubmitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>