<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="add"
            type="com.rdkn.piu_calc.activity.AddScoreActivity" />
        <variable
            name="vm"
            type="com.rdkn.piu_calc.viewmodel.AddScoreViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/label_song_title"
            style="@style/CommonEditLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/song_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/edit_song_title"
            style="@style/CommonEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_label"
            android:autofillHints="name"
            android:hint="@string/song_title"
            app:layout_constraintTop_toTopOf="@id/label_song_title"
            app:layout_constraintBottom_toBottomOf="@id/label_song_title"
            app:layout_constraintStart_toEndOf="@id/label_song_title"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/label_song_artist"
            style="@style/CommonEditLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_contents"
            android:text="@string/song_artist"
            app:layout_constraintTop_toBottomOf="@id/edit_song_title"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_song_artist_value"
            style="@style/CommonText.Gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_contents"
            app:layout_constraintTop_toTopOf="@id/label_song_artist"
            app:layout_constraintBottom_toBottomOf="@id/label_song_artist"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/label_bpm"
            style="@style/CommonEditLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_contents"
            android:text="@string/bpm"
            app:layout_constraintTop_toBottomOf="@id/label_song_artist"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_bpm_value"
            style="@style/CommonText.Gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_contents"
            app:layout_constraintTop_toTopOf="@id/label_bpm"
            app:layout_constraintBottom_toBottomOf="@id/label_bpm"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/label_diff"
            style="@style/CommonEditLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_contents"
            android:text="@string/difficulty"
            app:layout_constraintTop_toBottomOf="@id/label_bpm"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_diff_value"
            style="@style/CommonText.Gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_contents"
            app:layout_constraintTop_toTopOf="@id/label_diff"
            app:layout_constraintBottom_toBottomOf="@id/label_diff"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/button_add"
            style="@style/CommonSubmitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>